購物車互動 (未完成)

--- a/Kos/product.html
+++ b/Kos/product.html
@@ -217,12 +217,12 @@
 		<!-- 購物車 -->
 		<div class="cart-body">
 			<!-- 無商品 -->
-			<div id="cart-no-item" style="display: none;">
+			<div id="cart-no-item">
 				no item
 			</div>
 
 			<!-- 商品列表 -->
-			<div id="cart-item-list">
+			<div id="cart-item-list" style="display: none;">
 				<!-- 表格區域 (超出要顯示卷軸) -->
 				<div class="cart-content-table">
 					<table class="cart-table">
@@ -281,7 +281,7 @@
 
 		<!-- 結帳 -->
 		<div class="cart-footer">
-			<a href="#">checkout</a>
+			<a id="checkout-btn" href="#" style="display: none;">checkout</a>
 		</div>
 
 	</div>
