購物車JS完成

--- a/Kos/product.html
+++ b/Kos/product.html
@@ -90,7 +90,7 @@
 			<!-- 商品標題 -->
 			<div class="product-title">
 				<div id="product-name" class="product-name">noe vase</div>
-				<div id="product-price" class="product-price">$ 95</div>
+				<div class="product-price">$ <span id="product-price">95</span></div>
 			</div>
 
 			<!-- 商品介紹 -->
