--- a/Kos/index.html
+++ b/Kos/index.html
@@ -31,7 +31,7 @@
 			<a href="javascript:void(0)" class="mobile-bars" onclick="ShowBurgerMenu()">
 				<img src="asset/bars.png" />
 			</a>
-			<a href="javascript:void(0)" class="mobile-bag">
+			<a href="javascript:void(0)" class="mobile-bag" onclick="ShowCartDetail()">
 				<img src="asset/bag.png" />
 				<span class="badge-cart">(<span id="mobile-cart">0</span>)</span>
 			</a>
@@ -261,54 +261,38 @@
 			</div>
 		</div>
 
-		<!-- 購物車內容 -->
+		<!-- 購物車 -->
 		<div class="cart-body">
-			<table class="cart-table">
-				<tbody>
-					<tr>
-						<td>
-							<div class="cart-column1">
-								<div class="cart-img-cover">
-									<img src="asset/shop-01.png" />
-								</div>
-							</div>
-							<div class="cart-column2">
-								<div class="cart-name">noe vase</div>
-								<!-- 商品數量選擇 -->
-								<div class="cart-count">
-									<!-- 減少數量 -->
-									<div>
-										<a href="javascript:void(0)" onclick="ReduceCartNumber(1)">
-											<img class="minus-icon" src="asset/minus.png" />
-										</a>
-									</div>
-									<!-- 數量 -->
-									<div class="number-label">
-										<label id="number-1" class="cart-number">1</label>
-									</div>
-									<!-- 增加數量 -->
-									<div>
-										<a href="javascript:void(0)" onclick="IncreaseCartNumber(1)">
-											<img class="plus-icon" src="asset/plus.png" />
-										</a>
-									</div>
-								</div>
-							</div>
-							<div class="cart-column3">
-								<div class="cart-price">$ 95</div>
-								<div class="cart-remove">
-									<a href="javascript:void(0)" onclick="RemoveCartItem()"><img src="asset/trash.png" /></a>
-								</div>
-							</div>
-						</td>
-					</tr>
-				</tbody>
-			</table>
+			<!-- 無商品 -->
+			<div id="cart-no-item">
+				no item
+			</div>
+
+			<!-- 商品列表 -->
+			<div id="cart-item-list" style="display: none;">
+				<!-- 表格區域 (超出要顯示卷軸) -->
+				<div class="cart-content-table">
+					<table class="cart-table">
+						<tbody>
+							
+						</tbody>
+					</table>
+				</div>
+				
+				<!-- 總價格顯示 -->
+				<div class="cart-content-total">
+					<!-- 商品總數 -->
+					<span class="total-count">total (<span id="total-count">2</span> items)</span>
+
+					<!-- 商品總價格 -->
+					<span class="total-price">$ <span id="total-price">175</span></span>
+				</div>
+			</div>
 		</div>
 
 		<!-- 結帳 -->
 		<div class="cart-footer">
-
+			<a id="checkout-btn" href="#" style="display: none;">checkout</a>
 		</div>
 
 	</div>
