--- a/Kos/shop.html
+++ b/Kos/shop.html
@@ -5,8 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Kos</title>
     <!-- CSS -->
-    <link rel="stylesheet" type="text/css" href="css/common.css">
-    <link rel="stylesheet" type="text/css" href="css/shop.css">
+    <!-- <link rel="stylesheet" type="text/css" href="css/common.css">
+    <link rel="stylesheet" type="text/css" href="css/shop.css"> -->
+	<link rel="stylesheet" type="text/css" href="scss/common.css">
+    <link rel="stylesheet" type="text/css" href="scss/shop.css">
 </head>
 <body>
 
