--- a/Kos/index.html
+++ b/Kos/index.html
@@ -5,10 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Kos</title>
     <!-- CSS -->
-	<!-- <link rel="stylesheet" type="text/css" href="css/common.css">
-    <link rel="stylesheet" type="text/css" href="css/index.css"> -->
-	<link rel="stylesheet" type="text/css" href="scss/common.css">
-    <link rel="stylesheet" type="text/css" href="scss/index.css">
+    <link rel="stylesheet" type="text/css" href="css/index.css">
 </head>
 <body>
 
