--- a/Kos/product.html
+++ b/Kos/product.html
@@ -5,10 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Kos</title>
     <!-- CSS -->
-    <!-- <link rel="stylesheet" type="text/css" href="css/common.css">
-    <link rel="stylesheet" type="text/css" href="css/product.css"> -->
-	<link rel="stylesheet" type="text/css" href="scss/common.css">
-    <link rel="stylesheet" type="text/css" href="scss/product.css">
+    <link rel="stylesheet" type="text/css" href="css/product.css">
 </head>
 <body>
 
