完成common和index的SCSS更新

--- a/Kos/index.html
+++ b/Kos/index.html
@@ -106,7 +106,7 @@
 					<div class="card-area">
 						<!-- 商品項目 -->
 						<div class="card-item">
-							<a href="#">
+							<a href="product.html">
 								<img src="asset/shop-01.png" />
 								<div class="item-title">
 									<span class="item-name">noe vase</span>
@@ -117,7 +117,7 @@
 
 						<!-- 商品項目 -->
 						<div class="card-item">
-							<a href="#">
+							<a href="product.html">
 								<img src="asset/shop-02.png" />
 								<div class="item-title">
 									<span class="item-name">vaie vase</span>
@@ -128,7 +128,7 @@
 
 						<!-- 商品項目 -->
 						<div class="card-item">
-							<a href="#">
+							<a href="product.html">
 								<img src="asset/shop-03.png" />
 								<div class="item-title">
 									<span class="item-name">bruke vase</span>
@@ -139,7 +139,7 @@
 
 						<!-- 商品項目 -->
 						<div class="card-item">
-							<a href="#">
+							<a href="product.html">
 								<img src="asset/shop-04.png" />
 								<div class="item-title">
 									<span class="item-name">kol cup</span>
