--- a/Kos/product.html
+++ b/Kos/product.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Kos</title>
     <!-- CSS -->
+	<!-- <link rel="stylesheet" type="text/css" href="old/common.css">
+	<link rel="stylesheet" type="text/css" href="old/product.css"> -->
     <link rel="stylesheet" type="text/css" href="css/product.css">
 </head>
 <body>
