--- a/Kos/index.html
+++ b/Kos/index.html
@@ -17,15 +17,15 @@
 			<!-- PC 選單項目 -->
 			<ul class="topbar-left">
 				<li><a href="shop.html">shop</a></li>
-				<li><a href="#">about</a></li>
+				<li><a href="about.html">about</a></li>
 				<li><a href="#">contact</a></li>
 			</ul>
 			<div class="topbar-logo">
 				<a href="index.html"><img src="asset/logo.png" /></a>
 			</div>
 			<ul class="topbar-right">
-				<li><a href="#">account</a></li>
-				<li><a href="#">search</a></li>
+				<li><a href="account.html">account</a></li>
+				<li><a href="search.html">search</a></li>
 				<li><a href="javascript:void(0)" onclick="ShowCartDetail()">bag (<span id="pc-cart">0</span>)</a></li>
 			</ul>
 			<!-- Mobile 選單項目 -->
@@ -64,10 +64,10 @@
 					<a href="shop.html">shop</a>
 				</li>
 				<li>
-					<a href="#">account</a>
+					<a href="account.html">account</a>
 				</li>
 				<li>
-					<a href="#">about</a>
+					<a href="about.html">about</a>
 				</li>
 				<li class="has-sub">
 					<a href="#">contact</a>
@@ -220,8 +220,8 @@
 				<ul>
 					<li><h3>navigate</h3></li>
 					<li><a href="shop.html">shop</a></li>
-					<li><a href="#">account</a></li>
-					<li><a href="#">about</a></li>
+					<li><a href="account.html">account</a></li>
+					<li><a href="about.html">about</a></li>
 					<li><a href="#">contact</a></li>
 				</ul>
 				<ul>
