--- a/Kos/about.html
+++ b/Kos/about.html
@@ -16,7 +16,7 @@
 			<ul class="topbar-left">
 				<li><a href="shop.html">shop</a></li>
 				<li><a href="about.html">about</a></li>
-				<li><a href="#">contact</a></li>
+				<li><a href="contact.html">contact</a></li>
 			</ul>
 			<div class="topbar-logo">
 				<a href="index.html"><img src="asset/logo.png" /></a>
@@ -61,7 +61,7 @@
 					<a href="about.html">about</a>
 				</li>
 				<li class="has-sub">
-					<a href="#">contact</a>
+					<a href="contact.html">contact</a>
 				</li>
 				<li class="has-sub">
 					<a href="#">help</a>
