--- a/Kos/index.html
+++ b/Kos/index.html
@@ -18,7 +18,7 @@
 			<ul class="topbar-left">
 				<li><a href="shop.html">shop</a></li>
 				<li><a href="about.html">about</a></li>
-				<li><a href="#">contact</a></li>
+				<li><a href="contact.html">contact</a></li>
 			</ul>
 			<div class="topbar-logo">
 				<a href="index.html"><img src="asset/logo.png" /></a>
@@ -70,7 +70,7 @@
 					<a href="about.html">about</a>
 				</li>
 				<li class="has-sub">
-					<a href="#">contact</a>
+					<a href="contact.html">contact</a>
 				</li>
 				<li class="has-sub">
 					<a href="#">help</a>
@@ -222,7 +222,7 @@
 					<li><a href="shop.html">shop</a></li>
 					<li><a href="account.html">account</a></li>
 					<li><a href="about.html">about</a></li>
-					<li><a href="#">contact</a></li>
+					<li><a href="contact.html">contact</a></li>
 				</ul>
 				<ul>
 					<li><h3>help</h3></li>
