加入微動畫

--- a/Kos/about.html
+++ b/Kos/about.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Kos</title>
     <!-- CSS -->
+	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <link rel="stylesheet" type="text/css" href="css/page.css">
 </head>
 <body>
@@ -114,7 +115,7 @@
 	</div>
 
 	<!-- 購物車 -->
-	<div id="cart-panel" class="content">
+	<div id="cart-panel" class="content animate__animated animate__rotateInUpRight animate__faster">
 		<!-- 標題文字 -->
 		<div class="cart-head">
 			<!-- 關閉按鈕 -->
