--- a/Kos/search.html
+++ b/Kos/search.html
@@ -6,7 +6,8 @@
     <title>Kos</title>
     <!-- CSS -->
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
-    <link rel="stylesheet" type="text/css" href="css/page.css">
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
+	<link rel="stylesheet" type="text/css" href="css/page.css">
 </head>
 <body>
 
@@ -89,7 +90,7 @@
 	</div>
 
 	<!-- 購物車 -->
-	<div id="cart-panel" class="content">
+	<div id="cart-panel" class="content animate__animated animate__rotateInUpRight animate__faster">
 		<!-- 標題文字 -->
 		<div class="cart-head">
 			<!-- 關閉按鈕 -->
