--- a/Kos/contact.html
+++ b/Kos/contact.html
@@ -6,7 +6,8 @@
     <title>Kos</title>
     <!-- CSS -->
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
-    <link rel="stylesheet" type="text/css" href="css/page.css">
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
+	<link rel="stylesheet" type="text/css" href="css/page.css">
 </head>
 <body>
 
@@ -115,7 +116,7 @@
                     <!-- 內文 -->
                     <div class="input-group">
                         <div class="form-title">Message <span class="text-red">*</span></div>
-                        <textarea class="form-input" placeholder="Enter the subject" rows="5"></textarea>
+                        <textarea class="form-input" placeholder="Enter your message" rows="5"></textarea>
                     </div>
                 </div>
             </div>
@@ -131,7 +132,7 @@
 	</div>
 
 	<!-- 購物車 -->
-	<div id="cart-panel" class="content">
+	<div id="cart-panel" class="content animate__animated animate__rotateInUpRight animate__faster">
 		<!-- 標題文字 -->
 		<div class="cart-head">
 			<!-- 關閉按鈕 -->
