--- a/Kos/shop.html
+++ b/Kos/shop.html
@@ -7,6 +7,7 @@
     <!-- CSS -->
 	<!-- <link rel="stylesheet" type="text/css" href="old/common.css">
 	<link rel="stylesheet" type="text/css" href="old/shop.css"> -->
+	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <link rel="stylesheet" type="text/css" href="css/shop.css">
 </head>
 <body>
@@ -186,7 +187,7 @@
 	</div>
 
 	<!-- 購物車 -->
-	<div id="cart-panel" class="content">
+	<div id="cart-panel" class="content animate__animated animate__rotateInUpRight animate__faster">
 		<!-- 標題文字 -->
 		<div class="cart-head">
 			<!-- 關閉按鈕 -->
