修改網站細節

--- a/Kos/account.html
+++ b/Kos/account.html
@@ -40,7 +40,7 @@
 	</div>
 
 	<!-- 漢堡選單 -->
-	<div id="menu" class="burger-menu">
+	<div id="menu" class="burger-menu animate__animated animate__fadeInLeftBig animate__faster">
 		<div class="menu-wrapper">
 			<!-- 關閉按鈕 -->
 			<div class="menu-times">
@@ -64,9 +64,6 @@
 				</li>
 				<li class="has-sub">
 					<a href="contact.html">contact</a>
-				</li>
-				<li class="has-sub">
-					<a href="#">help</a>
 				</li>
 			</ul>
 		</div>
@@ -140,6 +137,42 @@
             </div>
 
 		</div>
+	</div>
+
+	<!-- 頁尾區塊 -->
+	<div id="footer" class="footer">
+		<div class="wrapper">
+			<hr />
+			<!-- 電腦版 (>= 576px) -->
+			<div class="footer-pc">
+				<ul>
+					<li><h3>navigate</h3></li>
+					<li><a href="shop.html">shop</a></li>
+					<li><a href="account.html">account</a></li>
+					<li><a href="about.html">about</a></li>
+					<li><a href="contact.html">contact</a></li>
+				</ul>
+				<ul>
+					<li><h3>help</h3></li>
+					<li><a href="#">shipping & delivery</a></li>
+					<li><a href="#">exchange & return</a></li>
+					<li><a href="#">terms & privacy</a></li>
+					<li><a href="#">faq</a></li>
+				</ul>
+				<ul>
+					<li><h3>social</h3></li>
+					<li><a href="#">facebook</a></li>
+					<li><a href="#">instagram</a></li>
+				</ul>
+			</div>
+
+			<!-- 手機板 (< 576px) -->
+			<div class="footer-mobile">
+				<a href="#"><img src="asset/facebook.png" /></a>
+				<a href="#"><img src="asset/instagram.png" /></a>
+			</div>
+		</div>
+		
 	</div>
 
 	<!-- 購物車 -->
