--- a/Kos/index.html
+++ b/Kos/index.html
@@ -47,7 +47,7 @@
 	</div>
 
 	<!-- 漢堡選單 -->
-	<div id="menu" class="burger-menu">
+	<div id="menu" class="burger-menu animate__animated animate__fadeInLeftBig animate__faster">
 		<div class="menu-wrapper">
 			<!-- 關閉按鈕 -->
 			<div class="menu-times">
@@ -72,9 +72,6 @@
 				</li>
 				<li class="has-sub">
 					<a href="contact.html">contact</a>
-				</li>
-				<li class="has-sub">
-					<a href="#">help</a>
 				</li>
 			</ul>
 		</div>
