加入新圖片

--- a/Kos/shop.html
+++ b/Kos/shop.html
@@ -126,8 +126,8 @@
 							<a href="product.html">
 								<img src="asset/shop-02.png" />
 								<div class="product-title">
-									<span class="product-name">noe vase</span>
-									<span class="product-price">$ 95</span>
+									<span class="product-name">vaie vase</span>
+									<span class="product-price">$ 80</span>
 								</div>
 							</a>
 						</div>
@@ -137,8 +137,8 @@
 							<a href="product.html">
 								<img src="asset/shop-03.png" />
 								<div class="product-title">
-									<span class="product-name">noe vase</span>
-									<span class="product-price">$ 95</span>
+									<span class="product-name">bruke vase</span>
+									<span class="product-price">$ 70</span>
 								</div>
 							</a>
 						</div>
@@ -146,10 +146,10 @@
 						<!-- 商品項目 -->
 						<div class="product-item">
 							<a href="product.html">
-								<img src="asset/shop-01.png" />
+								<img src="asset/shop-04.png" />
 								<div class="product-title">
-									<span class="product-name">noe vase</span>
-									<span class="product-price">$ 95</span>
+									<span class="product-name">kol cup</span>
+									<span class="product-price">$ 20</span>
 								</div>
 							</a>
 						</div>
@@ -157,10 +157,10 @@
 						<!-- 商品項目 -->
 						<div class="product-item">
 							<a href="product.html">
-								<img src="asset/shop-02.png" />
+								<img src="asset/shop-05.png" />
 								<div class="product-title">
-									<span class="product-name">noe vase</span>
-									<span class="product-price">$ 95</span>
+									<span class="product-name">suit vase</span>
+									<span class="product-price">$ 65</span>
 								</div>
 							</a>
 						</div>
@@ -168,10 +168,10 @@
 						<!-- 商品項目 -->
 						<div class="product-item">
 							<a href="product.html">
-								<img src="asset/shop-03.png" />
+								<img src="asset/shop-06.png" />
 								<div class="product-title">
-									<span class="product-name">noe vase</span>
-									<span class="product-price">$ 95</span>
+									<span class="product-name">flower vase</span>
+									<span class="product-price">$ 60</span>
 								</div>
 							</a>
 						</div>
